--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,12 @@ classifiers = [
 ]
 license = {text = "MIT license"}
 dependencies = [
-  "typer"
+  "typer",
+    "pykka",
+    "reactivex",
+    "grpcio",
+    "msgpack",
+
 ]
 
 [project.optional-dependencies]
