--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,13 @@ requires = ["setuptools>=61.0"]
 
 build-backend = "setuptools.build_meta"
 
+[tool.poetry]
+name = "qapi-python"
+version = "0.1.0"
+description = ""
+authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
+readme = "README.md"
+
 [project]
 name = "qapi_python"
 version = "0.1.0"
