--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ pykka = "4.0.2"
 pandas = "2.2.3"
 reactivex = "4.0.4"
 grpcio = "1.66.2"
-protobuf = "5.28.2
-requests = "2.32.3
+protobuf = "5.28.2"
+requests = "2.32.3"
 annotate = "1.1.1"
 
 [tool.poetry]
