--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,32 +2,32 @@
 requires = ["setuptools>=61.0"]
 
 build-backend = "setuptools.build_meta"
-
-[project]
-name = "qapi_python"
-version = "0.1.0"
-description = "Qapi Python"
-readme = "README.rst"
-authors = [
-  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
-]
-maintainers = [
-  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
-]
-classifiers = [
-
-]
-license = {text = "MIT license"}
-dependencies = [
-  "typer",
-    "pykka",
-    "pandas",
-    "reactivex",
-    "grpcio",
-    "protobuf",
-    "requests",
-    "annotate"
-]
+#
+#[project]
+#name = "qapi_python"
+#version = "0.1.0"
+#description = "Qapi Python"
+#readme = "README.rst"
+#authors = [
+#  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
+#]
+#maintainers = [
+#  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
+#]
+#classifiers = [
+#
+#]
+#license = {text = "MIT license"}
+#dependencies = [
+#  "typer",
+#    "pykka",
+#    "pandas",
+#    "reactivex",
+#    "grpcio",
+#    "protobuf",
+#    "requests",
+#    "annotate"
+#]
 
 [tool.poetry.dependencies]
 typer = "0.12.5"
