--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 
 build-backend = "setuptools.build_meta"
 #
-#[project]
-#name = "qapi_python"
+[project]
+name = "qapi_python"
 #version = "0.1.0"
 #description = "Qapi Python"
 #readme = "README.rst"
