--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -6,9 +6,9 @@ authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pandas = "^2.2.3"
-annotate = "^1.1.0"
+python = "^3.12"
+qapi-python = {git = "https://github.com/qapio/qapi-python.git"}
+
 
 [build-system]
 requires = ["poetry-core"]
