--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
-name = "qapi-test"
+name = "qapi-test2"
 version = "0.1.0"
 description = ""
 authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
-readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
